# JiPP2

./: CMakeLists.txt
Lab8/: CMakeLists.txt
Lab8/include/: ListNote.h  Note.h  NoteDirector.h  TextNote.h  include.h
Lab8/src/: ListNote.cpp  Note.cpp  TextNote.cpp
allocation_basics/: CMakeLists.txt  main.cpp  zadanie.cpp
classExercise/: CMakeLists.txt
classExercise/include/: classExercise.h
classExercise/src/: classExercise.cpp  main.cpp
classTest/: CMakeLists.txt
classTest/include/: myFirstClass.h
classTest/src/: main.cpp  myFirstClass.cpp
finalProject/: CMakeLists.txt
finalProject/main/: CMakeLists.txt
finalProject/main/src/: main.cpp
firstLibCall/: CMakeLists.txt  main.cpp
matrixApp/: CMakeLists.txt  bugList.md
matrixApp/src/: matrixApp.cpp
matrixLib/: CMakeLists.txt
matrixLib/include/: matrixApp.h
matrixLib/src/: matrixLib.cpp
noteApp/: CMakeLists.txt
noteApp/src/: noteApp.cpp
noteLib/: CMakeLists.txt
noteLib/include/: ListNote.h  Note.h  NoteDirector.h  TextNote.h
noteLib/src/: ListNote.cpp  Note.cpp  NoteDirector.cpp  TextNote.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
