cmake_minimum_required(VERSION 3.12)

add_subdirectory(allocation_basics)
add_subdirectory(simpleCalc)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)
add_subdirectory(matrixApp)
add_subdirectory(matrixLib)
add_subdirectory(classTest)
add_subdirectory(classExercise)
add_subdirectory(Lab6)
add_subdirectory(Lab7)
