cmake_minimum_required(VERSION 3.12)
project(JiPP)

add_subdirectory(allocation_basics)
add_subdirectory(classExercise)
add_subdirectory(classTest)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)
add_subdirectory(Lab6)
add_subdirectory(Lab7)
add_subdirectory(matrixApp)
add_subdirectory(matrixLib)
add_subdirectory(noteApp)
add_subdirectory(noteLib)
add_subdirectory(simpleCalc)
add_subdirectory(finalProject)